--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.0",
     "@eslint/js": "^9.2.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
