--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "^9.2.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -42,7 +43,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2",
     "typescript-eslint": "^8.0.0-alpha.13"
   }
