--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
+    "@angular/cdk": "^17.3.9",
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
@@ -21,6 +22,12 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/core": "^25.1.0",
+    "@ng-icons/lucide": "^26.3.0",
+    "@spartan-ng/ui-accordion-brain": "0.0.1-alpha.347",
+    "@spartan-ng/ui-core": "^0.0.1-alpha.347",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -30,6 +37,7 @@
     "@angular/cli": "^17.3.6",
     "@angular/compiler-cli": "^17.3.0",
     "@eslint/js": "^9.2.0",
+    "@spartan-ng/cli": "^0.0.1-alpha.350",
     "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
@@ -46,7 +54,9 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.6",
     "typescript": "~5.4.2",
     "typescript-eslint": "^8.0.0-alpha.13"
   }
