--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
