--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "@eslint/js": "^9.2.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
-    "eslint": "^9.2.0",
+    "angular-eslint": "18.0.1",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.2.0",
@@ -44,6 +45,6 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.2.5",
     "typescript": "~5.4.2",
-    "typescript-eslint": "^8.0.0-alpha.13"
+    "typescript-eslint": "8.0.0-alpha.20"
   }
 }
