--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "lodash": "^4.17.21",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.0",
     "rxjs": "~7.8.0",
@@ -33,6 +36,7 @@
     "@eslint/js": "^9.2.0",
     "@types/eslint__js": "^8.42.3",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.4",
     "angular-eslint": "18.0.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
